[package]
name = "webcam-visca-ip"
version = "0.9.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
uvcmock = [] # feature has no explicit dependencies

[dependencies]
tokio = { version = "1", features = ["full"] }
iced = { version = "0.4.2", features = ["tokio"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
dirs = "4.0.0"
iced_native = "0.5.1"
futures = "0.3.24"
tokio-stream = "0.1.10"
lazy_static = "1.4.0"

[target.'cfg(unix)'.dependencies]
v4l = "0.13.0"

[target.'cfg(windows)'.dependencies.nokhwa]
git = "https://github.com/quartzo/nokhwa.git"
branch = "ctrls"
#path = "../../nokhwa"
features = ["input-msmf"]
