[package]
name = "webcam-visca-ip"
version = "0.9.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
uvcmock = [] # feature has no explicit dependencies

[dependencies]
tokio = { version = "1", features = ["full"] }
iced = { version = "0.10.0", features = ["tokio"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
dirs = "5.0.1"
futures = "0.3.28"
tokio-stream = "0.1.14"
once_cell = "1.18.0"
thiserror = "1.0.48"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
hostname = "0.3.1"
turbojpeg = { version = "0.5.4", features = ["image"] }
image = "0.24.7"

[dependencies.nokhwa]
path = "nokhwa"
version = "0.10.3"
# Use the native input backends
features = ["input-native"]

[target.'cfg(unix)'.dependencies]
v4l = "0.14.0"

#[target.'cfg(windows)'.dependencies.nokhwa]
#git = "https://github.com/quartzo/nokhwa.git"
#branch = "ctrls"
##path = "../../nokhwa"
#features = ["input-msmf"]
